--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,7 @@
 
 
 // me: ¯\_(ツ)_/¯
-// 
+//
 .mfp-zoom-out-cur { cursor: default; }
 .mfp-zoom-out-cur .mfp-image-holder .mfp-close { cursor: pointer; }
 
@@ -10,15 +10,15 @@
 .container.max {
 	max-width: 1200px;
 	}
-	
+
 .container.width {
 	width: 95%;
 	}
-	
+
 .container.max {
 	max-width: 1200px;
 	}
-	
+
 .container {
 	margin: 0 auto;
 	position: relative;
@@ -29,7 +29,7 @@
 .topbar {
 	position: relative;
 	min-height: 36px;
-	margin-top: -5px;	
+	margin-top: -5px;
     border-bottom: 1px solid #f2f2f2;
 	}
 
@@ -44,8 +44,8 @@
 .topbar [role="navigation"] a {
 	border-bottom: 1px dotted;
 	}
-	
-.topbar [role="navigation"] a:hover {	
+
+.topbar [role="navigation"] a:hover {
 	color: $color-topbar-hover;
 	}
 
@@ -56,13 +56,13 @@
 	}
 
 /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
-		
+
 .navbar-wrap {
 	height: 90px;
     margin-bottom: 1px;
 	}
-	
-	
+
+
 .navbar {
 	position: relative;
 	overflow: visible;
@@ -73,37 +73,42 @@
 		-ms-transform: translate3d(0, 0, 0);
 			transform: translate3d(0, 0, 0);
 	z-index: 1030;
-	}	
-	
+	}
+
 .navbar-inner {
 	min-height: 90px;
 	}
-	
+
 #logo {
     display: block;
     float: left;
-	width: 183px !important;
-	min-height: 90px;	
+	width: 260px !important;
+	min-height: 90px;
     line-height: 1;
-    text-decoration: none;	
-	}	
+    text-decoration: none;
+	}
 
 
 #logo > div {
 	display: inline-block;
 	vertical-align: middle;
-	margin-top: 13px;
+	margin-top: 2px;
 	}
-	
+
 // 95 + 10 + 60 + 10
 #state-logo	{
 	width: 100px;
 	margin-right: 10px;
 	}
 #state-seal	{
-	width: 65px;
+	width: 85px;
 	}
-	
+
+.header-name {
+		margin-top: -4.6em !important;
+		margin-left: 6em;
+}
+
 .navbar-btn {
 	float: right;
     margin-top: 17px;
@@ -118,20 +123,20 @@
     -webkit-transition: box-shadow 0.3s ease,color 0.3s ease,background-color 0.3s ease;
             transition: box-shadow 0.3s ease,color 0.3s ease,background-color 0.3s ease;
     display: none;
-	}	
-	
+	}
+
 .navbar-btn:hover {
 	color: #919191;
 	background-color: #f7f7f7;
 	box-shadow: inset 0 1px 4px rgba(0,0,0, 0.25);
-	}	
+	}
 
 .navbar a:focus {
 	color: #000000 !important;
 	outline-offset: 3px;
 	}
-	
-	
+
+
 @media (max-width: 979px) {
 	.navbar-btn {
 		display: block;
@@ -150,12 +155,12 @@
 	float: right;
 	}
 
-.nav-wrap ul > li {	
+.nav-wrap ul > li {
 	float: left;
 	position: relative;
 	}
 
-.nav-wrap ul > li > a {	
+.nav-wrap ul > li > a {
 	display: block;
 	letter-spacing: -0.05em;
 	height: 90px;
@@ -175,24 +180,24 @@
 	color: black;
 	box-shadow: inset 0 4px 0 0 $color-anchor;
 	}
-	
+
 #nav-rwd {
 	display: none;
 	clear: both;
 	padding: 25px 0;
-	}	
-	
+	}
+
 #nav-rwd ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
 	clear: both;
-	}	
+	}
 #nav-rwd ul li {
 	line-height: $font-lineheight-default;
 	}
-	
-	
+
+
 #nav-rwd ul li > a {
     display: block;
     position: relative;
@@ -204,17 +209,17 @@
     font-size: $font-size-anchor-rwd;
     line-height: $font-lineheight-rwd;
     white-space: normal;
-	}	
+	}
 
 #nav-rwd ul li:last-of-type > a {
     border-bottom: 1px solid $color-hr;
 	}
-	
+
 #nav-rwd ul li > a:hover {
 	color: #000;
 	}
 
-	
+
 // there is a function in tsg.js that adds/removed these classes
 // that fix the navbar to the top of the page
 // it is triggered by the class 'navbar-fixed-top-active' on the body tag
@@ -223,30 +228,30 @@
 	left: 0;
 	right: 0;
 	}
-	
+
 .navbar-fixed-top {
 	position: fixed;
 	z-index: 1030;
 	height: 90px;
-	}	
+	}
 
 @media (max-width: 979px) {
 	body.navbar-fixed-top-active .navbar-wrap {
 		height: auto;
-		}		
-		
+		}
+
 	.navbar-fixed-top {
 		position: static;
-		}	
+		}
 } // end: max-width 979;
-	
-	
+
+
 /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
 
 .breadcrumb-wrap {
 	letter-spacing: 0;
 	text-transform: none;
-	font-size: 12px;	
+	font-size: 12px;
     margin: 0;
     border-bottom: 1px solid rgba(0,0,0, 0.1);
     padding: 1.05em 0;
@@ -254,42 +259,42 @@
     text-shadow: 0 1px 0 rgba(255,255,255,0.55);
     background-color: rgba(0,0,0, 0.0225);
     box-shadow: 0 1px 0 0 rgba(255,255,255 ,0.715);
-	}	
-	
+	}
+
 .home .breadcrumb-wrap {
 	display: none;
-	}	
-	
+	}
+
 /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
 
 #main {
 	padding: 30px 0;
 	}
-	
+
 #content-wrap {
     padding: 60px;
     background-color: #fff;
     border-radius: 4px;
-    box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);	
-	}	
+    box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
+	}
 
 .select-grade #main > .wrap-flex {
 	align-items: baseline; /* align the first text in the flexbox */
-	}	
-.select-grade #left-wrap {	
+	}
+.select-grade #left-wrap {
 	flex-basis: 230px;
-	}	
-.select-grade #content-wrap {	
+	}
+.select-grade #content-wrap {
 	margin-left: 30px;
 	flex: 1;
-	}	
-	
+	}
+
 @media (max-width: 979px) {
-	.select-grade #content-wrap {	
+	.select-grade #content-wrap {
 		order: 1;
 		margin-left: 0;
 		}
-	.select-grade #left-wrap {	
+	.select-grade #left-wrap {
 		order: 2;
 		padding-top: 60px;
 		flex-basis: 100%;
@@ -298,11 +303,11 @@
 		display: block; /* this makes the .has-right pages display as two block */
 		padding: 20px;
 		}
-}		
+}
 
 .has-right #main .wrap-flex {
 	align-items: flex-start;
-	}	
+	}
 
 .has-right .content-wrap {
 	/* this has to be repeated here to override the display block on #content-wrap */
@@ -312,124 +317,124 @@
 	display: -ms-flexbox;      /* TWEENER - IE 10 */
 	display: -webkit-flex;     /* NEW - Chrome */
 	display: flex;
-	}	
-	
-.has-right .right-wrap {	
+	}
+
+.has-right .right-wrap {
 	flex-basis: 280px; /* 30%-ish via sb site */
-	}	
-.has-right .content {	
+	}
+.has-right .content {
 	margin-right: 60px;
 	flex: 1;
-	}		
-	
+	}
+
 @media (max-width: 979px) {
-	.has-right .content {	
+	.has-right .content {
 		margin-right: 0;
 		}
 
-}	
-	
-	
-	
+}
+
+
+
 #intro-wrap {
 	background-color: #fff;
 	background-image: url(../img/home-bg.jpg);
-	}	
+	}
 .home #intro-wrap .wrap-flex {
 	align-items: center;
 	color: #000;
 	text-shadow: 2px 2px 4px rgba(256, 256, 256, 0.8);
 	}
-	
-.home .content {	
+
+.home .content {
 	margin-right: 60px;
 	flex: 1;
-	}		
+	}
 .home .content p {
 	font-size: 130%;
 	}
-	
-	
-.home .right-wrap {	
+
+
+.home .right-wrap {
 	flex-basis: 350px; /* need room for the select contents */
 	background-color: rgba(256, 256, 256, 0.75);
 	padding: 2em;
 	margin: 20px;
 	border-radius: $border-radius;
-	}	
+	}
 
-.home .right-wrap select {	
+.home .right-wrap select {
 	font-size: 100%;
 	}
-	
+
 .home h1 {
 	color: black;
 	border-bottom: 0;
 	}
 
-.home .right-wrap select, 
+.home .right-wrap select,
 .home .right-wrap button {
 	width: 100%;
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
-	}	
-		
+	}
+
 .home .right-wrap button {
 	color: #fff;
 	padding: 0.5rem 0;
-	background-color: #007393;
-	border: 1px solid #007393;
+	background-color: $color-button1;
+	border: 1px solid $color-button1;
 	border-radius: $border-radius;
-	}	
+	}
 .home .right-wrap button:hover {
 	background-color: #004355;
 	border-color: #004355;
-	}	
-	
+	}
+
 .blocks {
 	align-items: stretch;
-	}	
-	
+	}
+
 .blocks > .block {
 	flex: 1;
 	margin: 1rem;
 	padding: 1rem 1rem 2rem 1rem;
 	position: relative;
-	}	
+	}
 
 .blocks > .block:first-of-type {
 	margin-left: -1.1rem;
 	}
-	
-	
+
+
 .blocks > .block h2 {
 	font-size: 170%;
-	}	
-	
+	}
+
 .blocks > .block h2,
 .blocks > .block p:first-of-type {
 	margin-left: 0.3rem;
 	}
-	
-	
+
+
 .block.w-sections {
 	padding-bottom: 0;
 	position: relative;
-	}	
-	
+	}
+
 .block.w-sections h2 {
 	margin-bottom: 0.5em;
 	}
-	
+
 .block .page {
 	display: inline-block;
 	max-width: calc(50% - 20px);
-	}	
+	}
 
 .block .page + .page {
 	margin-left: 20px;
 	}
-	
+
 .block .page img,
 .block .section img {
 	max-width: 100%;
@@ -437,11 +442,11 @@
 	border: 1px solid $table-heading-background;
 	border-radius: $border-radius;
 	}
-	
+
 .sections {
 	margin-left: 240px;
 	min-height: 290px;
-	}	
+	}
 
 .side-by-side {
 	width: 48%;
@@ -451,18 +456,18 @@
 .side-by-side + .side-by-side {
 	margin-left: 20px;
 	}
-	
+
 .block .page.sm {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 200px;
 	}
-	
+
 .sections .text {
 	padding: 1em 0;
 	}
-	
+
 @media (max-width: 979px) {
 	.side-by-side {
 		width: auto;
@@ -471,7 +476,7 @@
 		margin-top: 20px;
 		margin-left: 0;
 		}
-}	
+}
 
 @media (max-width: 750px) {
 	.block .page.sm {
@@ -481,8 +486,8 @@
 		margin-left: 0;
 		}
 }
-	
-	
+
+
 .blocks > .block button {
 	position: absolute;
 	bottom: 0;
@@ -490,16 +495,16 @@
 	}
 
 @media (max-width: 851px) {
-	
+
 	#intro-wrap .wrap-flex,
 	.blocks.wrap-flex {
 		display: block;
 		}
-		
-	.home #intro-wrap {	
+
+	.home #intro-wrap {
 		padding: 1em 0;
-		}	
-		
+		}
+
 	.home .right-wrap,
 	.home .block {
 		margin: 20px 0;
@@ -508,66 +513,66 @@
 	.home .block {
 		padding: 1em 0 2em;
 		}
-	
+
 	.blocks > .block:first-of-type {
 		margin-left: 0;
-		}	
-		
+		}
+
 }
-	
-	
+
+
 #select-grade-stds {
-	}	
-	
+	}
+
 #select-grade-stds button,
 #select-grade-stds select {
 	width: 100%;
 	}
 
 .select-grade-narrow {
-	max-width: 350px; 
+	max-width: 350px;
 	}
-	
-// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
+
+// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
 // div.accordion
 // used on the scores pages
 
 .accordion {
-	border-radius: $border-radius;	
+	border-radius: $border-radius;
 	margin-bottom: 1.5em;
 	// background-color: $accordion-background-color;
 	// border: 2px solid $accordion-trigger-background;
 	// margin-left: 28px; /* match '.accordion p' */
-	
+
 	background-color: #fff;
 	border: 2px solid $color-accordion-gray;
 
     box-shadow: 0 0.125em 0.275em 0 rgba(0,0,0,0.125);
 
-	}	
+	}
 
 .accordion p {
 	margin-left: 28px;
 	margin-right: 28px;
-	}	
-	
+	}
+
 .accordion ul {
 	margin-left: 56px;
 	margin-right: 28px;
-	}		
-	
+	}
+
 .ie .accordion p {
 	// there is a specific problem where IE allows a word to break on a set of parents
 	// 'teacher(s)' -- see score, grade 6, math, level 2
 	// adding a smidge of right margin to force IE to put start with the whole word on the next line
 	// - dhj
 	margin-right: 1em;
-	}	
-	
-.accordion p:first-of-type {	
+	}
+
+.accordion p:first-of-type {
 	margin-top: 10px;
 	}
- 
+
 .accordion h3[role="button"] {
 	cursor: pointer;
 	display: block;
@@ -590,11 +595,11 @@
 	}
 
 .accordion h3[aria-expanded="false"] {
-	}	
+	}
 .accordion h3[aria-expanded="true"] {
 	color: $color-anchor;
-	}	
-	
+	}
+
 // .accordion h3 svg {
 // 	display: inline-block;
 //	vertical-align: middle;
@@ -604,30 +609,30 @@
 //	margin-right: 10px;
 //	fill:  $color-h2;
 //	}
-	
-	
+
+
 h3[role="button"] .status-open-close {
 	display: inline-block;
 	margin-right: 0.5rem;
 	color: $color-accordion-gray !important;
-	
+
 	-webkit-transition: all 0.3s ease;
-	        transition: all 0.3s ease;	
-	
+	        transition: all 0.3s ease;
+
 	}
 h3[role="button"][aria-expanded="true"] .status-open-close {
 	-webkit-transform: rotate(45deg);
 	    -ms-transform: rotate(45deg);
-	        transform: rotate(45deg);	
-	
+	        transform: rotate(45deg);
+
 	}
-	
+
 .accordion h3[role="button"] + .bellows {
 	display: none;
 	padding-left: 10px; /* align with the h3 text */
 	}
-	
-// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
+
+// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
 // div.by-claim
 // used on the scores pages
 
@@ -641,7 +646,7 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 .by-claim .claim {
 	width: calc( 100% - 325px - 20px);
 	float: left;
-	font-size: 95%;	
+	font-size: 95%;
 	}
 
 .claim h3 {
@@ -664,8 +669,8 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 	background-position: 50% 50%;
 	background-size: contain;
 	margin-right: 10px;
-	}	
-	
+	}
+
 .by-claim .standards {
 	width: 325px;
 	float: right;
@@ -676,14 +681,14 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
     border-bottom: 0;
     box-shadow: 0 0.125em 0.275em 0 rgba(0,0,0,0.125);
 	}
-	
+
 .standards .triggers {
 	background: #fff;
 	width: 85px;
-	text-align: center;	
+	text-align: center;
 	float: left;
 	}
-	
+
 .standards .triggers a,
 #main .standards .triggers a {
 	display: block;
@@ -691,13 +696,13 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 	line-height: 1.1;
 	color: $color-claim-trigger;
 	background-color: $color-claim-background;
-	}	
+	}
 .standards .triggers a.on,
 #main .standards .triggers a.on {
 	box-shadow: inset 0 3px 0 0 $color-topbar-hover;
 	background-color: #fff;
 	}
-	
+
 .standards .std {
 	float: right;
 	width: 238px;
@@ -707,7 +712,7 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 	background-color: #fff;
 	font-size: 88%;
 	border-left: 1px solid rgba(0,0,0,0.15);
-	}	
+	}
 .standards .std.on {
 	display: block;
 	}
@@ -724,43 +729,43 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 		width: 73.23076923076923%; // 238/325 * 100
 		}
 }
-	
-	
-.reading.by-claim { background-color: rgba( $color-claim-reading, 0.1); }	
-// fails color contrast --> .reading .claim h3 { color: $color-claim-reading; }		
-.reading .claim h3 { color: black; }		
-.reading .claim h3:before { background-image: url(../img/icon-ela-reading.png); }		
 
-.writing.by-claim { background-color: rgba( $color-claim-writing, 0.1); }	
+
+.reading.by-claim { background-color: rgba( $color-claim-reading, 0.1); }
+// fails color contrast --> .reading .claim h3 { color: $color-claim-reading; }
+.reading .claim h3 { color: black; }
+.reading .claim h3:before { background-image: url(../img/icon-ela-reading.png); }
+
+.writing.by-claim { background-color: rgba( $color-claim-writing, 0.1); }
 // fails color contrast --> .writing .claim h3 { color: $color-claim-writing; }
 .writing .claim h3 { color: black; }
 .writing .claim h3:before { background-image: url(../img/icon-ela-writing.png); }
 
-.research.by-claim { background-color: rgba( $color-claim-research, 0.1); }	
+.research.by-claim { background-color: rgba( $color-claim-research, 0.1); }
 // fails color contrast --> .research .claim h3 { color: $color-claim-research; }
 .research .claim h3 { color: black; }
 .research .claim h3:before { background-image: url(../img/icon-ela-research.png); }
 
-.listening.by-claim { background-color: rgba( $color-claim-listening, 0.1); }	
+.listening.by-claim { background-color: rgba( $color-claim-listening, 0.1); }
 // fails color contrast --> .listening .claim h3 { color: $color-claim-listening; }
 .listening .claim h3 { color: black; }
 .listening .claim h3:before { background-image: url(../img/icon-ela-listening.png); }
-	
-.concepts.by-claim { background-color: rgba( $color-claim-concepts, 0.1); }	
+
+.concepts.by-claim { background-color: rgba( $color-claim-concepts, 0.1); }
 // fails color contrast --> .concepts .claim h3 { color: $color-claim-concepts; }
 .concepts .claim h3 { color: black; }
 .concepts .claim h3:before { background-image: url(../img/icon-math-concepts.png); }
 
-.solving.by-claim { background-color: rgba( $color-claim-solving, 0.1); }	
+.solving.by-claim { background-color: rgba( $color-claim-solving, 0.1); }
 // fails color contrast --> .solving .claim h3 { color: $color-claim-solving; }
 .solving .claim h3 { color: black; }
 .solving .claim h3:before { background-image: url(../img/icon-math-problem-solving.png); }
-	
-.reasoning.by-claim { background-color: rgba( $color-claim-reasoning, 0.1); }	
+
+.reasoning.by-claim { background-color: rgba( $color-claim-reasoning, 0.1); }
 // fails color contrast --> .reasoning .claim h3 { color: $color-claim-reasoning; }
 .reasoning .claim h3 { color: black; }
 .reasoning .claim h3:before { background-image: url(../img/icon-math-communicating.png); }
-	
+
 @media (max-width: 801px) {
 	.by-claim .claim,
 	.by-claim .standards {
@@ -772,24 +777,24 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 	.standards .std	{
 		width: calc(100% - 85px);
 		}
-}	
-	
-	
+}
+
+
 // /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
 //
 // changes to the default behaviour of the image stage.
 // me: ¯\_(ツ)_/¯
-// 
+//
 .mfp-zoom-out-cur { cursor: default; }
 .mfp-zoom-out-cur .mfp-image-holder .mfp-close { cursor: pointer; }
 
-	
+
 // /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
 
 	#left-wrap,
 	.right-wrap{
 		}
-	
+
 	.rail {
 		img {
 			border-radius: $border-radius;
@@ -800,14 +805,14 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 	.rail {
 		border-top: 1px solid #d4d4d4;
 		padding-top: 20px;
-	
+
 		.fluff {
 			display: none;
 			}
 	}
 }
-	
-	
+
+
 /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
 
 #wrap-footer {
@@ -819,8 +824,8 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
 	text-align: right;
 	border-top: 1px solid #d4d4d4;
 	box-shadow: 0 -0.125em 0.25em 0 rgba(0,0,0, 0.075);
-	}	
-	
+	}
+
 #footer hr {
 	display: none;
 	}
@@ -841,30 +846,27 @@ h3[role="button"][aria-expanded="true"] .status-open-close {
     display: block;
     letter-spacing: 0;
 	color: $color-anchor;
-	border-bottom: 1px solid $color-anchor-underline;	
+	border-bottom: 1px solid $color-anchor-underline;
     font-size: $font-size-footer-a;
-    font-weight: 400;	
+    font-weight: 400;
     text-transform: none;
-	}	
+	}
 
 #footer ul li a:hover {
 	color: $color-anchor-hover;
-	border-bottom: 2px solid $color-anchor-hover-underline;	
+	border-bottom: 2px solid $color-anchor-hover-underline;
 	}
-	
+
 #footer .cya {
 	margin: 30px 0 10px;
 	margin-top: 0.2em;
 	}
-	
+
 #footer .cya a {
 	color: $color-footer;
 	}
-	
-	
+
+
 /* -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- */
 // fin
-// 
-
-
-
+//
