--- a/css/main.scss
+++ b/css/main.scss
@@ -8,8 +8,8 @@ $padding-default: 10px;
 
 $border-radius: 4px;
 
-$font-serifs: 'PT Serif', serif;
-$font-sans-serifs: 'PT Sans', sans-serif;
+$font-serifs: 'Merriweather', serif;
+$font-sans-serifs: 'Open Sans', sans-serif;
 
 $font-size-default: 16px;
 $font-size-formfields: 13px;
@@ -29,47 +29,59 @@ $font-lineheight-table: 1.4;
 $font-lineheight-footer: 1.3;
 
 $font-size-h1: 250%;
-$font-size-h2: 240%;
+$font-size-h2: 220%;
 $font-size-h3: 205%;
 $font-size-h4: 160%;
 $font-size-h5: 145%;
 $font-size-h6: 100%;
 
-$color-body: #6c6c6c;
-$color-body-background: #f3f3f3;
+$color-body: #191919;
+$color-body-background: #f7f7f7;
 
-$color-bold: #63666a;
+$color-bold: #191919;
 
 $color-hr: #f2f2f2;
 
-$color-h1: #008ab1;
-$color-h1-underline: #d3dfe1;
-$color-h2: #000000;
+$color-h1: #002d5d;
+$color-h1-underline: #9bb7d4;
+$color-h2: #191919;
 
-$color-underline: #d3dfe1;
+$color-underline: #9bb7d4;
 $color-form-placeholder: #c5c5c5;
 $color-form-disabled-background: #eee;
 
 $color-heading: #63666a;
 $color-footer: #7a7a7a;
 
-$color-anchor: #007393;
-$color-anchor-underline: #b2dbe7;
+$color-anchor: #002d5d;
+$color-anchor-underline: #9bb7d4;
 
-$color-anchor-hover: #358c21;
-$color-anchor-hover-underline: #a1d794;
+$color-anchor-hover: #002d5d;
+$color-anchor-hover-underline: #002d5d;
 
-$color-anchor-focus: #008ab1; 
+$color-anchor-focus: #008ab1;
 $color-anchor-focus-background: #e5f3f7;
 
 $color-topbar: #686868;
-$color-topbar-hover: #007393;
+$color-topbar-hover: #002d5d;
 
 
 $color-accordion-gray: #ccc;
 $color-claim-trigger: #272727;
 $color-claim-text: #000;
 $color-claim-background: #f0f0f0;
+
+// Button color customization
+
+$color-button1: #002d5d;
+$color-button1-hover: #001f41;
+
+$color-button2: #002d5d;
+$color-button2-hover: #001f41;
+
+$color-button3: #002d5d;
+$color-button3-hover:#001f41;
+
 
 // These colors all failed the accessiblity contrast check when applied to the font
 // font is not black, but these color are pulled in for the background color; dhj
@@ -86,7 +98,7 @@ $sb-logo-background: #f2f2f2;
 $sb-logo-statecolor: #ffca02;
 
 $table-heading-color: #fff;
-$table-heading-background:  #007393;
+$table-heading-background:  #002d5d;
 
 $byclaim-background-color: #ffffe8;
 
@@ -99,5 +111,28 @@ $byclaim-background-color: #ffffe8;
         "layout",
 		"rwd",
 		"ie"
-		
+
 ;
+
+// logo header customization
+#idaho-mark{
+  font-family: Baskerville, 'Palatino Linotype', Palatino, 'Century Schoolbook L', 'Times New Roman', serif;
+  font-size: 44px;
+  font-weight: 500;
+  color: #3a5082;
+  padding-left: .1em;
+}
+#state-seal img{
+  margin-top:.4em;
+  max-width:90%;
+}
+#idaho-sub{
+  font-family: 'Open Sans', sans-serif;
+  display: inline-block;
+  margin: 0px;
+  padding: 0px;
+  font-weight: 600;
+  color: #3a5082;
+  font-size: 9px;
+  line-height: 10px;
+}
